--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,9 @@
         android:id="@+id/towngaslogo"
         android:layout_width="wrap_content"
         android:layout_height="257dp"
-        android:layout_margin="@dimen/margin"
+        android:layout_marginTop="@dimen/margin"
+        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/margin"
         app:srcCompat="@drawable/towngas_logo"
         android:layout_above="@+id/EditTxtLocation" />
 
