--- a/app/src/main/res/layout/dialog_worker_select.xml
+++ b/app/src/main/res/layout/dialog_worker_select.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:layout_marginLeft="@dimen/margin"
+    android:layout_marginRight="@dimen/margin">
 
     <TextView
         android:layout_width="match_parent"
